--- a/hello.html
+++ b/hello.html
@@ -6,5 +6,6 @@
 <body>
 This is a body text JOE!
 	This is new change on the file.
+	This is the conflicted line in github on internet.
 </body>
 </html>
