Now is the HTML class.

--- a/hello.html
+++ b/hello.html
@@ -4,8 +4,6 @@
 	<title>My first webPage</title>
 </head>
 <body>
-This is a body text JOE!
-	This is new change on the file.
-	This is the conflicted line in github on internet.
+	Hello world!
 </body>
 </html>
